--- a/day6/css/style.css
+++ b/day6/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+:root {
+  --primary-color: #4daf54;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +12,8 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(to right, #4daf54, #3d8880);
+  background: linear-gradient(to right, var(--primary-color), #3d8880);
+  font-family: 'Poppins';
 }
 
 .card {
@@ -29,16 +36,117 @@ body {
 }
 
 .card__cart--icon {
-    left: unset;
-    right: 20px;
+  left: unset;
+  right: 20px;
 }
 
 .card__img {
-    width: 90%;
+  width: 90%;
+  transition: 0.7s;
 }
 
 .card__img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card__title,
+.card__price {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  transition: 0.7s;
+}
+
+.card__title {
+  color: var(--primary-color);
+}
+
+.card__rom,
+.card__color {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.card__rom span {
+  padding: 2px 5px;
+  background: #dadada;
+  color: black;
+  border-radius: 5px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.card__color span {
+  width: 15px;
+  height: 15px;
+  margin: 0 5px;
+}
+
+.color-purple {
+  background: purple;
+}
+
+.color-black {
+  background: black;
+}
+
+.color-gold {
+  background: gold;
+}
+
+.color-white {
+  background: white;
+}
+
+.card__action {
+  text-align: center;
+}
+
+.card__action button {
+  background-color: var(--primary-color);
+  border: none;
+  outline: none;
+  color: wheat;
+  padding: 10px 20px;
+  border-radius: 15px;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.card__action button:hover {
+  scale: 0.9;
+  cursor: pointer;
+}
+
+.card:hover .card__img {
+  transform: translateY(-90px) rotate(-20deg);
+}
+
+.card:hover .card__title {
+  transform: translate(-30px, -60px);
+}
+
+.card:hover .card__price {
+  transform: translate(-60px, -50px);
+}
+
+.card__rom {
+  margin-top: 5px;
+}
+
+.card__rom, .card__color, .card__action {
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.7s;
+  transition-delay: 0.1s;
+}
+
+.card:hover .card__rom, 
+.card:hover .card__color,
+.card:hover .card__action {
+  visibility: visible;
+  opacity: 100;
 }
