--- a/day8/css/style.css
+++ b/day8/css/style.css
@@ -24,6 +24,7 @@ body {
     border-radius: 20px;
     text-align: center;
     overflow: hidden;
+    margin: 0 30px;
 }
 
 .card__img {
@@ -32,12 +33,22 @@ body {
     border: 4px solid var(--primary-color);
     overflow: hidden;
     border-radius: 50%;
-    /* margin: 0 auto; */
-    margin: 25px auto;
-    /* transform: translateY(25px); */
+    margin: 0 auto;
+    /* margin: 25px auto; */
+    transform: translateY(25px);
+    transition: 0.7s;
+    cursor: pointer;
 }
 
-img {
+.card__img:hover {
+    width: 100%;
+    height: 100%;
+    border-radius: unset;
+    transform: unset;
+    border: unset;
+}
+
+.card img {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -64,4 +75,19 @@ img {
 
 .card__social--icon a:hover {
     color: var(--primary-color);
+}
+
+.card button {
+    width: 100px;
+    height: 50px;
+    border: 1px solid var(--primary-color);
+    background: transparent;
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.7s;
+}
+
+.card button:hover {
+    background: var(--primary-color);
 }
